Fix: Modal close button

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
                                         id="checkbox1"
                                         checked
                                 />
-                                <label class="checkbox2-label" for="checkbox1" required>
+                                <label class="checkbox2-label" for="checkbox1">
                                     <span class="checkbox-icon"></span>
                                     J'ai lu et accepté les conditions d'utilisation.
                                 </label>
@@ -197,9 +197,8 @@
                                 <br>
                             </div>
                             <input
-                                    class="btn-submit"
+                                    class="btn-submit button"
                                     type="submit"
-                                    class="button"
                                     value="C'est parti"
                             />
                         </form>
