--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                                 name="first-name"
                                 minlength="2"
                         />
-                        <br>
+                        <div class="form-error" id="firstName-msg">Error</div>
                     </div>
                     <div class="formData">
                         <label>Nom</label><br>
@@ -78,7 +78,7 @@
                                 id="last-name"
                                 name="last-name"
                         />
-                        <br>
+                        <div class="form-error" id="lastName-msg">Error</div>
                     </div>
                     <div class="formData">
                         <label>E-mail</label><br>
@@ -87,7 +87,8 @@
                                 type="email"
                                 id="email"
                                 name="email"
-                        /><br>
+                        />
+                        <div class="form-error" id="email-msg">Error</div>
                     </div>
                     <div class="formData">
                         <label>Date de naissance</label><br>
@@ -96,12 +97,15 @@
                                 type="date"
                                 id="birthdate"
                                 name="birthdate"
-                        /><br>
+                        />
+                        <div class="form-error" id="birthdate-msg">Error</div>
                     </div>
                     <div class="formData">
+                        <br>
                         <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                        <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                        <input type="number" class="text-control" id="gameOnParticipation" name="quantity" min="0" max="99">
                     </div>
+                    <div class="form-error" id="gameOnParticipation-msg">Error</div>
                     <p class="text-label">Quelles villes ?</p>
                     <div class="formData">
                         <input
@@ -170,20 +174,22 @@
                             <span class="checkbox-icon"></span>
                             Portland
                         </label>
+                        <div class="form-error" id="city-msg">Error</div>
                     </div>
 
                     <div class="formData">
+                        <div class="form-error" id="conditionsAccepted-msg">Error</div>
                         <input
                                 class="checkbox-input"
                                 type="checkbox"
-                                id="checkbox1"
+                                id="conditionsAccepted"
                                 checked
                         />
-                        <label class="checkbox2-label" for="checkbox1">
+                        <label class="checkbox2-label" for="conditionsAccepted">
                             <span class="checkbox-icon"></span>
                             J'ai lu et accepté les conditions d'utilisation.
                         </label>
-                        <br>
+
                         <input class="checkbox-input" type="checkbox" id="checkbox2"/>
                         <label class="checkbox2-label" for="checkbox2">
                             <span class="checkbox-icon"></span>
