Fix: Close modal icon and sign-up mobile button

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,15 @@
             <img src="src/assets/images/bg_img.jpg" alt="img"/>
         </div>
 
+        <button class="btn-signup modal-btn" id="sign-up-mobile">
+            je m'inscris
+        </button>
+
     </div>
 
     <div class="bground">
         <div class="content" id="content">
-            <span class="close"></span>
+            <span class="close" id="close-icon"></span>
             <div class="modal-body" id="modal-body">
                 <form
                         name="reserve"
