Fix: Split js in two files

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                         <div class="form-error" id="lastName-msg">Error</div>
                     </div>
                     <div class="formData">
-                        <label>E-mail</label><br>
+                        <label for="email">E-mail</label><br>
                         <input
                                 class="text-control"
                                 type="email"
