--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8"/>
     <title>Reservation</title>
@@ -62,7 +62,7 @@
                         onsubmit="return validate();"
                 >
                     <div class="formData">
-                        <label>Prénom</label><br>
+                        <label for="first-name">Prénom</label><br>
                         <input
                                 class="text-control"
                                 type="text"
@@ -73,7 +73,7 @@
                         <div class="form-error" id="firstName-msg">Error</div>
                     </div>
                     <div class="formData">
-                        <label>Nom</label><br>
+                        <label for="last-name">Nom</label><br>
                         <input
                                 class="text-control"
                                 type="text"
@@ -93,7 +93,7 @@
                         <div class="form-error" id="email-msg">Error</div>
                     </div>
                     <div class="formData">
-                        <label>Date de naissance</label><br>
+                        <label for="birthdate">Date de naissance</label><br>
                         <input
                                 class="text-control"
                                 type="date"
@@ -103,7 +103,7 @@
                         <div class="form-error" id="birthdate-msg">Error</div>
                     </div>
                     <div class="formData">
-                        <label class="tournament">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                        <label class="tournament" for="gameOnParticipation">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                         <input type="number" class="text-control" id="gameOnParticipation" name="quantity" min="0" max="99">
                         <div class="form-error" id="gameOnParticipation-msg">Error</div>
                     </div>
@@ -111,6 +111,7 @@
 
                     <div class="formData">
                         <label>Quelle ville ?</label><br>
+
                         <input
                                 class="checkbox-input"
                                 type="radio"
@@ -122,6 +123,7 @@
                             <span class="checkbox-icon"></span>
                             New York
                         </label>
+
                         <input
                                 class="checkbox-input"
                                 type="radio"
