--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="topnav" id="myTopnav">
     <div class="header-logo">
-        <img src="src/assets/images/Logo.png" alt="logo">
+        <img src="assets/images/Logo.png" alt="logo">
     </div>
     <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -42,7 +42,7 @@
             </button>
         </div>
         <div class="hero-img">
-            <img src="src/assets/images/bg_img.jpg" alt="img"/>
+            <img src="assets/images/bg_img.jpg" alt="img"/>
         </div>
 
         <button class="btn-signup modal-btn" id="sign-up-mobile">
